Projeto: RentalX - Usuários, Autenticação e Upload
